--- a/public/styles/show.css
+++ b/public/styles/show.css
@@ -27,14 +27,17 @@ h3 span {
 }
 
 .island-review {
-
-  margin-left: 5rem;
-  display: inline-block;
+  margin: 0 14rem;
   padding: 2rem;
-  vertical-align: top;
-  
 }
+.island-review > h2 {
+  text-align: center;
+}
+
 .card {
+  text-align: center;
+}
+.card-title {
   text-align: center;
 }
 
@@ -42,6 +45,14 @@ h3 span {
   /* margin: 2rem 5rem; */
   margin: 2rem 10rem;
   border: 2px solid black;
+}
+
+fieldset.starability-checkmark {
+  margin: 0 auto;
+
+}
+p.starability-result {
+  margin: 1rem auto;
 }
 #map {
   max-width: 50vw; 
